--- a/index.html
+++ b/index.html
@@ -11,22 +11,18 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   
 </head>
+   
 <body>
 <div class="content">
-  
   <div class="content__box">
-    <img src="images/image-qr-code.png" alt="">
-    <h1>Improve your front-end skills by building projects</h1>
-
-    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+    <img src="images/image-qr-code.png" alt=""  >
+    <h2>
+        Improve your front-end<br>skills by building projects
+      </h2>
+    <div class="content__color">
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to  the next level</p>
     </div>
-
   </div>
-  
 </div>
 
 </body>
